# codespace-wpi

./: .env  .gitassumeunchanged  .gitignore  Dockerfile  compose.yaml  config.conf  configure_mounting.bash  downloader.bash  java_install.bash  start_up.bash
docs/: notes.md
host_controller/: .dockerignore  .env  Dockerfile  compose.yaml  start_up.bash
host_controller/api/: Cargo.toml
host_controller/api/src/: main.rs  webGateway.rs
host_controller/data/: README  users.csv
host_controller/nginx/: nginx.conf
host_controller/nginx/conf.d/http/: code.conf  maps.conf
host_controller/nginx/conf.d/stream/: wpi_codespace_example.conf
host_controller/public/: index.css  index.html  index.js  noti.css
host_controller/public/__rcap_access_control__adfadsfs/: index.css  index.html  index.js
