[package]
name = "host_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html 

[[bin]]
name = "web_gateway"
path = "src/webGateway.rs"


[dependencies]
hyper = { version = "1.0.1", features = ["full"] }
tokio = { version = "1.34.0", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
mio = { version = "0.8.9", features = ["net"] }
axum = { version = "0.6.20", features = ["headers", "macros"] }
csv = "1.3.0"
serde = { version = "1.0.193", features = ["derive"] }
sha2 = "0.10.8"
rand = "0.8.5"
serde_json = { version = "1.0.108", features = ["indexmap", "preserve_order"] }
base64ct = { version = "1.6.0", features = ["alloc"] }
ctrlc = { version = "3.4.1", features = ["termination"] }
cookie = { version = "0.18.0", features = ["percent-encode"] }

# need to wait for but fix on tower-http 0.5+, also should bump axum up after they release next major 11/25/2023
tower-http = { version = "0.4.4", features = ["cors"] }
tower = "0.4.13"
